Fix featureinfo panel size on mobile

--- a/web/client/product/assets/css/viewer.css
+++ b/web/client/product/assets/css/viewer.css
@@ -364,9 +364,6 @@ html, body, #container, .fill {
         width: 500px !important;
     }
 }
-#mapstore-getfeatureinfo {
-    min-width: 500px !important;
-}
 
 .panel-close:after {
     content: 'x';
